--- a/css/boot_card.css
+++ b/css/boot_card.css
@@ -2,6 +2,41 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
+.mdl-textfield 
+{
+  width: 100%;
+}
+div#tt4.icon
+{
+  margin-right: 30px;
+  cursor: pointer;
+
+}
+
+/*section
+{
+  background-color: black;
+  opacity: 0.1;
+}*/
+
+div#cancel_butt.row
+{
+  margin-top: 15px;
+}
+
+div.container-fluid.pop_up_container
+{
+  width: 50%;
+  position: fixed;
+  z-index: 99;
+  margin-left: 25%;
+  background-color: white;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 50px;
+  display: none;
+}
+
 .card {
   margin-top: 10px;
   box-sizing: border-box;
